fix hover problem on mobile view

--- a/src/styles/Answer.css
+++ b/src/styles/Answer.css
@@ -25,13 +25,18 @@
 
 .answer-list li:hover {
   cursor: pointer;
-  background-color: #1da598;
-  transition: ease-in 0.2s;
 }
 
-@media only screen and (min-width: 768px) {
+.answer-list li:active {
+  background-color: #1da598;
+}
+
+@media only screen and (min-width: 770px) {
   .answer-list {
     width: 425px;
-    /* padding-top: 15px; */
+  }
+  .answer-list li:hover {
+    background-color: #1da598;
+    transition: ease-in 0.2s;
   }
 }
